<?xml version="1.0" encoding="utf-8"?>

<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"    
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" 
    tools:context=".MainActivity" >
    
<ImageView 
    android:id="@+id/foto"
    android:layout_width="200dp"
	android:layout_height="200dp"
	android:contentDescription="@string/descrizione"
	android:src="@drawable/android_default"
	style="@android:style/Widget.DeviceDefault.Light.Spinner"
	android:onClick="select_photo"/>

<EditText
    android:id="@+id/name"
    android:inputType="textPersonName"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
    android:hint="@string/nome_cognome" />

<EditText
    android:id="@+id/address"
    android:inputType="textPostalAddress"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
    android:hint="@string/indirizzo" />

<EditText android:id="@+id/telefono"
    android:inputType="phone"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
    android:hint="@string/telefono" />

<EditText android:id="@+id/fax"
    android:inputType="textUri"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
    android:hint="@string/fax" />

<EditText android:id="@+id/email"
    android:inputType="textEmailAddress"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
    android:hint="@string/email" />

<Spinner android:id="@+id/nazionalita"
	android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
    android:hint="@string/nazionalita" />

<Button android:id="@+id/data"
    android:paddingLeft="10dp"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
    style="@android:style/Widget.DeviceDefault.Light.Spinner"
    android:gravity="center_vertical|left" 
    android:textSize="18sp"
    android:hint="@string/data"
    android:onClick="showDatePickerDialog"/>

<Button android:id="@+id/next"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:hint="@string/next"
    android:onClick="nextPage" />
</LinearLayout>

</ScrollView>