<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"    
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".Abilities_2" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/relazioni"/>
    <EditText 
        android:id="@+id/relazioni"
        android:layout_width="fill_parent"
        android:inputType="textMultiLine"
        android:layout_height="wrap_content"
        android:hint="@string/descr"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/organizza"/>
    <EditText 
        android:id="@+id/organizza"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
                android:inputType="textMultiLine"
        android:hint="@string/descr"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        
        android:text="@string/tecnica"/>
    <EditText 
        android:id="@+id/tecnica"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
                android:inputType="textMultiLine"
        android:hint="@string/descr"/>
        <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/arte"/>
    <EditText 
        android:id="@+id/arte"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
                android:inputType="textMultiLine"
        android:hint="@string/descr"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/altri"/>
    <EditText 
        android:id="@+id/altri"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
                android:inputType="textMultiLine"
        android:hint="@string/descr"/>
   <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/patente"/>
    <EditText 
        android:id="@+id/patente"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
       	android:inputType="textMultiLine"
        android:hint="@string/patente_descr"/>
    
<Button android:id="@+id/next"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:hint="@string/crea"
    android:onClick="creaPDF" />
</LinearLayout>
</ScrollView>