<?xml version="1.0" encoding="utf-8"?>

<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"    
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" 
    tools:context=".JobExperience">
 <LinearLayout
	android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"> 
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"> 
    
<Button android:id="@+id/startDate"
    android:paddingLeft="10dp"
        android:layout_height="fill_parent"
        android:layout_width="0dip"
        android:layout_weight="1"
    style="@android:style/Widget.DeviceDefault.Light.Spinner"
    android:gravity="center_vertical|left" 
    android:textSize="18sp"
    android:hint="@string/startdata"
    android:onClick="showStartDatePickerDialog"/>

<Button android:id="@+id/endDate"
    android:paddingLeft="10dp"
        android:layout_height="fill_parent"
        android:layout_width="0dip"
        android:layout_weight="1"
    style="@android:style/Widget.DeviceDefault.Light.Spinner"
    android:textSize="18sp"
    android:hint="@string/enddata"
    android:onClick="showEndDatePickerDialog"/>
</LinearLayout>

<EditText
    android:id="@+id/nJob"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:inputType="textMultiLine"
    android:hint="@string/njob" />
<EditText
    android:id="@+id/tJob"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:inputType="textMultiLine"
    android:hint="@string/tjob" />

<EditText
    android:id="@+id/impiego"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:inputType="textShortMessage"
    android:hint="@string/impiego" />

<EditText
    android:id="@+id/mansione"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:inputType="textMultiLine"
    android:hint="@string/mansione" />


</LinearLayout>

</ScrollView>